<resources>
    <string name="default_server">https://telxt.wilddogio.com</string>
    <string name="default_auth_domain">telxt.wilddog.com</string>
    <string name="app_name">Telxt</string>
    <string name="enter_server_address_title">Server URL or IP address:</string>
    <string name="enter_server_address">Enter server address</string>
    <string name="button_validate">Validate</string>
    <string name="unknown">Unknown</string>
    <string name="preference_file_key">hk.myles.smsmanager.store</string>
    <string name="change_server">Change Server</string>
    <string name="last_connection">Last connection:</string>
    <string name="status">Status:</string>
    <string name="server_address">Server address:</string>
    <string name="show_code">Show Code</string>
</resources>
